--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -1,8 +1,7 @@
-#img_logo {
-   position: absolute;
-   top: 20px;
-   left: 25px;
-   z-index: 10;
+#div_logo {
+   width: 100%;
+   display: block;
+   text-align: center;
 }
 
 p {
@@ -69,6 +68,12 @@ p {
 
 #view-image {
    background-image: url('../../assets/view.png');
+   background-repeat:no-repeat;
+   background-size: cover;
+} 
+
+#screenshots-image {
+   background-image: url('../../assets/monitor.png');
    background-repeat:no-repeat;
    background-size: cover;
 } 
