--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -4,7 +4,7 @@
     <mat-card-title>Scenes
       <button id="but_new_scene" mat-stroked-button matTooltip="Import data and create new scene" [routerLink]="[urlScene]">
         <mat-icon>add_photo_alternate</mat-icon>
-        <span>Add Scene</span>
+        <span>&nbsp;Add Scene</span>
       </button>
     </mat-card-title>
   </mat-card-header>
