--- a/src/themes/koia-theme.scss
+++ b/src/themes/koia-theme.scss
@@ -2,8 +2,8 @@
 
 @include mat-core();
 
-$koia-primary: mat-palette($mat-indigo);
-$koia-accent:  mat-palette($mat-green);
+$koia-primary: mat-palette($mat-indigo, 700, 300, 900);
+$koia-accent:  mat-palette($mat-blue, 600);
 $koia-warn:    mat-palette($mat-orange);
 
 $koia-theme: mat-light-theme($koia-primary, $koia-accent, $koia-warn);
