--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -81,7 +81,7 @@
       <button id="butAddColFilter" mat-stroked-button matTooltip="Add column filter"
         [matMenuTriggerFor]="columnFilterMenu">
         <mat-icon>add_circle_outline</mat-icon>
-        <span>Add Filter</span>
+        <span>&nbsp;Add Filter</span>
       </button>
       <mat-menu #columnFilterMenu="matMenu">
         <span *ngFor="let column of scene.columns">
