--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -7,12 +7,18 @@
 p {
    text-align: justify;
 }
+
+#but_hide_show_steps {
+   position: absolute;
+   right: 50%;   
+   top: 120px;
+}
  
 .carousel {
    display: block;
    margin-left: auto;
    margin-right: auto;
-   max-width: 600px;
+   max-width: 800px;
 }
 
 #div_intro_cards {
@@ -42,7 +48,13 @@ p {
    text-align: right;
 }
 
-#army-knive-image {
+#about-image {
+   background-image: url('../../assets/info.png');
+   background-repeat:no-repeat;
+   background-size: cover;
+}
+
+#features-image {
    background-image: url('../../assets/army_knife.png');
    background-repeat:no-repeat;
    background-size: cover;
