--- a/src/app/pivot-table/pivot-table.component.html
+++ b/src/app/pivot-table/pivot-table.component.html
@@ -33,7 +33,7 @@
         </button>
       </mat-menu>
 
-      <button mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
+      <button id="but_print" mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
         (click)="printView()">
         <mat-icon>print</mat-icon>
       </button>
