--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -19,7 +19,7 @@
       </koia-main-toolbar>
       <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
       <div id="view_toolbar">
-         <button mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
+         <button id="but_print" mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
             [disabled]="elementContexts.length === 0" (click)="printView()">
             <mat-icon>print</mat-icon>
          </button>
