Open web-app with predefined CouchDB connection parameters and scene

--- a/src/app/front/connection-dialog/connection-dialog.component.html
+++ b/src/app/front/connection-dialog/connection-dialog.component.html
@@ -2,25 +2,25 @@
   <h3>CouchDB Access</h3>
   <div>
     <mat-form-field>
-      <input id="host" matInput type="text" placeholder="Host" [(ngModel)]="editingConnInfo.host">
+      <input id="host" matInput type="text" placeholder="Host" [(ngModel)]="data.connectionInfo.host">
     </mat-form-field>
     &nbsp;
     <mat-form-field>
-      <input id="port" matInput type="number" placeholder="Port" [(ngModel)]="editingConnInfo.port">
+      <input id="port" matInput type="number" placeholder="Port" [(ngModel)]="data.connectionInfo.port">
     </mat-form-field>
   </div>
   <div>
     <mat-form-field>
-      <input id="user" matInput type="text" placeholder="User" [(ngModel)]="editingConnInfo.user">
+      <input id="user" matInput type="text" placeholder="User" [(ngModel)]="data.connectionInfo.user">
     </mat-form-field>
     &nbsp;
     <mat-form-field>
-      <input id="password" matInput type="password" placeholder="Password" [(ngModel)]="editingConnInfo.password">
+      <input id="password" matInput type="password" placeholder="Password" [(ngModel)]="data.connectionInfo.password">
     </mat-form-field>
   </div>
   <br>
   <div>
-    <button id="but_cancel" mat-raised-button color="primary" (click)="dialogRef.close()">Cancel</button>
+    <button id="but_cancel" mat-raised-button color="primary" (click)="onCancel()">Cancel</button>
     &nbsp;
     <button id="but_ok" mat-raised-button color="primary" (click)="onOK()">OK</button>
   </div>
